# opencv_awesome

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/includes/opencv2/core/: cvdef.h
android/src/main/java/com/azadprajapat/opencv_awesome/: OpencvAwesomePlugin.java
android/src/main/jni/: native_opencv.cpp
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/azadprajapat/opencv_awesome_example/: MainActivity.java
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: opencv_awesome.podspec
ios/Classes/: OpencvAwesomePlugin.h  OpencvAwesomePlugin.m  SwiftOpencvAwesomePlugin.swift
lib/: opencv_awesome.dart
lib/data/: methods.dart
lib/modal/: ProcessImage.dart
test/: opencv_awesome_test.dart
